...
            "state" : "translated",
            "value" : "over"
          }
        }
      }
    },
    "Add" : {
      "comment" : "Label for submit button on form to add an entry",
      "localizations" : {
        "be" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Дадаць"
...
            "state" : "translated",
            "value" : "Voeg de informatie beneden toe"
          }
        }
      }
    },
    "Add Vehicle" : {
      "comment" : "Label to add a vehicle.",
      "localizations" : {
        "be" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Дадаць транспартны сродак"
...
    "Selected vehicle" : {

    },
    "Selects the vehicle to display total number of maintenance events for." : {

    },
    "Settings" : {
      "comment" : "Label to display settings.",
      "localizations" : {
        "be" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Налады"
...
            "state" : "translated",
            "value" : "Номерний знак авта"
          }
        }
      }
    },
    "Vehicle Make" : {
      "localizations" : {
        "be" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Вытворца транспартнага сродку"
          }
...
            "state" : "translated",
            "value" : "Виробник авто"
          }
        }
      }
    },
    "Vehicle Model" : {
      "localizations" : {
        "be" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Мадэль транспартнага сродку"
          }
...
            "state" : "translated",
            "value" : "Модель авто"
          }
        }
      }
    },
    "Vehicle Name" : {
      "localizations" : {
        "be" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Назва транспартнага сродку"
          }
...
